ProjektKubernetes/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
  labels:
    app: api

spec:
  template:
    metadata:
      name: api
      labels:
        app: api
    spec: 
      containers:
        - name: backend-api
          image: api:production
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
  replicas: 2
  selector:
    matchLabels:
      app: api
