ProjektKubernetes/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: react-app
  labels:
    app: app

spec:
  template:
    metadata:
      name: react-app
      labels:
        app: app

    spec: 
      containers:
        - name: frontend-app
          image: app-react:production
          imagePullPolicy: Never
          ports:
            - containerPort: 80
           
  replicas: 2
  selector:
    matchLabels:
      app: app
