ProjektKubernetes/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service

spec:
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  selector:
    app: api
