ProjektKubernetes/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service

spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app
